--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -40,25 +40,138 @@
 .read-the-docs {
   color: #888;
 } */
+
+
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import "tailwindcss";
-@theme {
-  --breakpoint-2xl: 96rem;
-  /* --breakpoint-3xl: 120rem; */
 
-  --container-2xl: 90rem;
-  /* --container-3xl: 90rem; */
-  
+@layer base {
+  :root {
+    --color-white: #fff;
+    --color-main: #333;
+    --color-black: #000;
+    --color-whatsapp: #1fca1f;
+  }
 }
-
 
 @utility container {
   margin-left: auto;
   margin-right: auto;
   padding-left: 1rem;
   padding-right: 1rem;
+  max-width: 1440px;
+}
+
+@layer components {
+
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 body {
   font-family: 'Poppins', sans-serif;
+  line-height: 1.4;
+  color: var(--color-main);
+  background-color: #f5f5f5;
+}
+
+h1,
+h2,
+h3 {
+  line-height: 1.1;
+}
+
+section {
+  padding: 4rem 0;
+}
+
+header {
+  box-shadow: 0 0 10px 0px #b8b8b8;
+
+  &.headerSticky {
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 999;
+    animation: transitionHeader 1s;
+
+    .logo {
+      width: 130px;
+    }
+  }
+
+  nav {
+    ul {
+      li {
+        a {
+          font-size: 1.1rem;
+          font-weight: 500;
+          position: relative;
+          display: inline-block;
+          transition: all .6s ease;
+
+          &:hover {
+            transform: rotateX(360deg);
+          }
+        }
+      }
+    }
+  }
+}
+
+.hero {
+  position: relative;
+
+  &:after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: block;
+    background-color: rgba(0, 0, 0, 0.4);
+    top: 0;
+    left: 0;
+    z-index: 1;
+  }
+}
+
+.productsWrapper {
+  .product {
+    border-radius: .5rem;
+    box-shadow: 0 0 10px 0 #d6d6d6;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+    background-color: var(--color-white);
+    cursor: pointer;
+    transition: all 0.3s ease;
+
+    &:hover {
+      transform: scale(1.03);
+    }
+    
+    .product-content {
+      padding: 1.2rem;
+
+      h3 {
+        font-size: 1.1rem;
+        margin-bottom: 0.5rem;
+        font-weight: 600;
+      }
+    }
+  }
+
+}
+
+@keyframes transitionHeader {
+  0% {
+      top: -6rem;
+  }
+
+  100% {
+      top: 0;
+  }
 }
